        -- Lots of documentation work.
        -- Pick up com.mchange.v2.c3p0.impl.DefaultConnectionTester.isValidTimeout as default
	   value of new connectionIsValidTimeout property, so that users upgrading from previous
	   version still capture the setting from the old config, even as their ConnectionTester
	   now falls back to null.
c3p0-0.10.0-pre5
	-- Lots of documenting, condensing, clean-up, etc.
	-- Define connectionIsValidTimeout as an ordinary bean-style config parameter.
  	   Previously users had to set a universal property (in c3p0.properties or System
	   properties) to set this timeout.
	-- Use simplified isValid(...) based timeout by default, use traditional
	   ConnectionTester logic only when users specify or force a ConnectionTester
c3p0-0.10.0-pre4
	-- Define (in a separate, Java 21, project) a loom virtual-threads based
	   TaskRunnerFactory, VirtualThreadPerTaskExecutorTaskRunnerFactory.
	   See https://github.com/swaldman/c3p0-loom
	-- DefineFixedThreadPoolExecutorTaskRunnerFactory, a simple example that
	   replaces c3p0's traditional Thread pool with an unshared ThreadPoolExecutor
	   of size numHelperThreads.
	-- Define AbstractExecutorTaskRunnerFactory, which users can extend to use or
	   share java.util.concurrent.Executor instances rather than c3p0's traditional
	   hand-rolled Thread pool.
	   See https://github.com/swaldman/c3p0/issues/76
	       https://github.com/swaldman/c3p0/issues/41
	   Thanks Michele Rossi, and mysterious GitHub @ghost.
	-- Define TaskRunnerFactory, and config param TaskRunnerFactoryClassName.
	   Users can provide implementations of TaskRunnerFactory with a public no-arg
	   constructor to take full control of threading, thread-pooling, etc.
	-- Support SOURCE_DATE_EPOCH for deterministic builds.
	   (Here and in mchange-commons-java.)
	   See https://github.com/swaldman/c3p0/issues/163
	       https://reproducible-builds.org/docs/source-date-epoch/