@@ -21,20 +21,27 @@ Some highlights:
 
 Thanks to...
 
+    Andy at Privitar
     Thomas Beckmann
+    Hermann Bergqvist
     Joel Caplin
     chinhodado
     Mathilde Ffrench
-    Githib ghost
+    Github ghost
+    Metin Gürleyen
     François JACQUES
     koszta5
     Hakan
     Lorenzo Gabriele
     Jörg Hohwiller
+    Thomas Leytrick
     Li Haoyi
+    Li Rh
     marcatl
+    Matteo Mazza
     Rodrigo Merino
     MichaelMih
+    Horacio Miranda
     Leona Nezvalova
     Bernhard E. Reiter
     Tobias Roeser
