@@ -1,4 +1,6 @@
-* Eliminate source headers
-* Revise / update documentation
-  - Especially threading and connection testing
+* Add guard for automaticTestTable
+* Finish security box re trusted config
+  - Make its background is red
+  - Check ToC link
+
 
